--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -2,3 +2,9 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
+
+@media (max-width: 920px) {
+    .features{
+        grid-template-columns: 1fr;
+    }
+}
