--- a/src/components/Hero/style.css
+++ b/src/components/Hero/style.css
@@ -23,6 +23,23 @@
 }
 .text{
     font-size: 1.2rem;
-    margin: 0;
-    margin-top: 15px;
+    margin: 15px 0 0;
+}
+
+@media (max-width: 920px) {
+    .hero{
+        height: 300px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .heroContent{
+        position: initial;
+    }
+    .subtitle{
+        font-size: 1rem;
+    }
+    .text{
+        font-size: 0.9rem;
+    }
 }
