--- a/src/Pages/Dashboard/style.css
+++ b/src/Pages/Dashboard/style.css
@@ -16,6 +16,10 @@
 }
 .dashboardTitle{
         text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap:10px;
 }
 .dashboardTitle > h1{
         margin: 0;
@@ -27,4 +31,20 @@
         display: flex;
         flex-direction: column;
         gap: 30px;
+}
+
+.inlineButton{
+        display: flex;
+        gap: 10px;
+}
+.inlineInput{
+        display: flex;
+        gap:10px;
+}
+.inputEdit{
+        padding: 5px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        outline: none;
+        font-size: 1.2rem;
 }
